<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:orientation="vertical"
              tools:context="robin.com.wifisensor.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height"
        android:background="@color/background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_ip" />

        <ImageView
            android:layout_width="@dimen/icon_width1"
            android:layout_height="@dimen/icon_width1"
            android:src="@drawable/img_logout"
            android:id="@+id/activity_main_logout"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:background="@drawable/ic_background">

        <EditText
            android:id="@+id/login_email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hintcolor"/>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bottom_line"
            android:drawableLeft="@drawable/ic_pwd"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hintcolor"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/forgetpassword"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/login_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/yellow"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16dp"/>
        <TextView
            android:id="@+id/login_register_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_white"
            android:gravity="center"
            android:text="@string/signup"
            android:padding="5dp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>




    </LinearLayout>


</LinearLayout>
